plugins {
    id 'application'
}

dependencies {
}

sourceSets.main.java.srcDirs = ['src']

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

application {
    mainClass = 'App'
    applicationDefaultJvmArgs = ['--enable-preview']
}
